php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #5273 ISAPI crash on shutdown
Submitted: 2000-06-29 18:06 UTC Modified: 2000-08-20 02:39 UTC
From: chris-php-bugs at digitaria dot com Assigned:
Status: Closed Package: Reproducible Crash
PHP Version: 4.0.0 Release OS: NT 4.0 SP6a
Private report: No CVE-ID: None
 [2000-06-29 18:06 UTC] chris-php-bugs at digitaria dot com
(The bug is actually in 4.0.1 release. bugs.php.net doesn't have that option)

With PHP configured using ISAPI, a PHP page which generates HTML which references two images generated by PHP scripts will die with "PHP has encountered an Access Violation at 016276B2". Once this happens, net stop w3svc will cause inetinfo to die with an application in "Zend Timeout Window" (The instruction at "0x015b0c55" referenced memory at "0x015b0c55". The memory could not be read.)

This wouldn't be a big deal except that the CGI version generates 'The instruction at "0x1007d13e" referenced memory at "0x00000000". The memory could not be "read".' for any page (even if there's no actual PHP in the page). This does not happen from the commandline but does happen regardless of the contents of php.ini.

Replacing the .exe & .dll files from 4.0.1 RC1 fixed everything.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2000-07-27 19:51 UTC] waldschrott@php.net
Please verify that it?s still happening using the latest version of PHP (release 4.0.1pl2 or CVS).

 [2000-08-20 02:39 UTC] sniper@php.net
No feedback from user.

--Jani
 [2011-01-24 03:31 UTC] stas@php.net
Automatic comment from SVN on behalf of stas
Revision: http://svn.php.net/viewvc/?view=revision&revision=307689
Log: Fixed bug #5273 (Can't use new properties in class extended from DateInterval)
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Aug 19 07:00:01 2026 UTC