Fixed bug #5273 (Can't use new properties in class extended from DateInterval)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@307689 c90b9560-bf6c-de11-be94-00142212c4b1